All_Component_DX/force-app/main/default/objects/SM_IG_Job_Request__c/SM_IG_Job_Request__c.object-meta.xml
<CustomObject>
    <description>Log the information about Integration Job Request</description>
    <label>Integration Job Request</label>
    <nameField>
        <displayFormat>JR-{00000}</displayFormat>
        <label>Job Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Integration Job Request</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>