All_Component_DX/force-app/main/default/objects/SM_IG_Job_Request__c/fields/Reconcile_From_Date__c.field-meta.xml
<CustomField>
    <fullName>Reconcile_From_Date__c</fullName>
    <description>Date to identify reconciliation job scope</description>
    <inlineHelpText>Date to identify reconciliation job scope</inlineHelpText>
    <label>Reconcile From Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>