All_Component_DX/force-app/main/default/objects/SM_IG_Job_Request__c/fields/Request__c.field-meta.xml
<CustomField>
    <fullName>Request__c</fullName>
    <description>Integration Request</description>
    <inlineHelpText>Integration Request</inlineHelpText>
    <label>Request</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>